--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/logo.svg" alt="Around the U.S. Logo" />
+        <img src="./images/logo.svg" alt="Around the U.S. Logo" class="header__logo"     />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -30,7 +30,7 @@
             alt="Avatar"
             class="profile__image"
           />
-          <div class="profile__info"></div>
+          <div class="profile__info">
           <h1 class="profile__header">Jacques Cousteau</h1>
           <button
             class="profile__edit-button"
@@ -38,6 +38,7 @@
             aria-label="Edit Profile"
           ></button>
           <p class="profile__description">Explorer</p>
+          </div>
           <button
             class="profile__add-button"
             type="button"
@@ -46,21 +47,6 @@
         </section>
         <section class="cards page__section">
           <ul class="card__list">
-            <li class="card">
-              <img
-                src="./images/bald-mountains.jpg"
-                class="card__image"
-                alt="Bald Mountains"
-              />
-              <div class="card__description">
-                <h2 class="card__header">Bald Mountains</h2>
-                <button
-                  class="card__like-button"
-                  type="button"
-                  aria-label="Like Button"
-                ></button>
-              </div>
-            </li>
             <li class="card">
               <img
                 src="./images/lago-di-braies.jpg"
@@ -78,6 +64,36 @@
             </li>
             <li class="card">
               <img
+              src="./images/bald-mountains.jpg"
+              class="card__image"
+              alt="Bald Mountains"
+            />
+            <div class="card__description">
+              <h2 class="card__header">Bald Mountains</h2>
+
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="Like Button"
+                ></button>
+                </div>
+                </li>
+                <li class="card">
+              <img src="./images/latemar.jpg"
+              class="card__image"
+              alt="Latemar Sky Picture"
+            />
+            <div class="card__description">
+              <h2 class="card__header">Latemar</h2>
+              <button
+              class="card__like-button"
+              type="button"
+              aria-label="Like Button"
+            ></button>
+            </div>
+                </li>
+            <li class="card">
+              <img
                 src="./images/lake-louise.jpg"
                 class="card__image"
                 alt="Lake Louise Picture"
@@ -91,21 +107,7 @@
                 ></button>
               </div>
             </li>
-            <li class="card">
-              <img
-                src="./images/latemar.jpg"
-                class="card__image"
-                alt="Latemar Sky Picture"
-              />
-              <div class="card__description">
-                <h2 class="card__header">Latemar</h2>
-                <button
-                  class="card__like-button"
-                  type="button"
-                  aria-label="Like Button"
-                ></button>
-              </div>
-            </li>
+          
             <li class="card">
               <img
                 src="./images/vanoise-national-park.jpg"
@@ -140,7 +142,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright">&copy;Around the U.S.</p>
+        <p class="footer__copyright">&copy;2022 Around the U.S.</p>
       </footer>
     </div>
   </body>
