Updated html and cards.css per validator

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           ></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/lago-di-braies.jpg"
@@ -107,7 +107,7 @@
                 ></button>
               </div>
             </li>
-          
+
             <li class="card">
               <img
                 src="./images/vanoise-national-park.jpg"
